# waterwaves

./: .gitignore  LICENSE.txt  README.md  configure.ac
f2018/: README.md  fpm.toml
f2018/app/: main.f90
f2018/src/: f2018.f90
f2018/src/meggermo/: megermo.f90
f2018/src/meggermo/grid/: meggermo_grid.f90  meggermo_grid_linear.f90
f2018/src/meggermo/integration/: meggermo_integration.f90
f2018/src/meggermo/interpolation/: meggermo_interpolation.f90  meggermo_interpolation_overhauser.f90  meggermo_interpolation_spline.f90
f2018/src/meggermo/io/: meggermo_io.f90
f2018/src/meggermo/io/toml/: meggermo_io_toml.f90
f2018/src/meggermo/kernel/: meggermo_kernel.f90
f2018/src/meggermo/network/: meggermo_network.f90
f2018/src/meggermo/params/: meggermo_params.f90
f2018/src/meggermo/quadrature/: meggermo_quadrature.f90
f2018/src/meggermo/vars/: meggermo_vars.f90
f2018/test/meggermo/grid/: meggermo_grid_test.f90
f2018/test/meggermo/inerpolation/: meggermo_interpolation_test.f90
f2018/test/meggermo/io/toml/: meggermo_io_toml_test.f90
f2018/test/meggermo/kernel/: meggermo_kernel_test.f90
f2018/test/meggermo/quadrature/: meggermo_quadrature_test.f90
f2018/test/resources/: test_config.toml
include/: anl_params.inc  bct_params.inc  cdf_params.inc  cfs_params.inc  chk_params.inc  fle_params.inc  grd_params.inc  int_params.inc  knd_params.inc  max_params.inc  net_funcs.inc  net_params.inc  rk4_params.inc  rle_params.inc  slv_funcs.inc  slv_params.inc  spl_params.inc  tme_funcs.inc  tme_params.inc  usr_params.inc
resources/input/: linwave.in  pistonwavemaker-002.in  pistonwavemaker.in  rect.in  rfwave.in  rotated-rect.in
resources/octave/: plotout.m
src/: 1  Makefile.am  analytic.f  analytic_t.f  anl_params.inc  back_subs.f  bcd.f  bct_params.inc  bem.f  boundary_conditions.f  cdf_params.inc  check_coefs.f  check_interfaces.f  check_network_parameters.f  chk_params.inc  circlesect_grid.f  coefficients.f  compute_ngp_nae.f  compute_ngp_sd.f  compute_nnw.f  contour_integral.f  coord_transformations.f  copy_ngp_to_nw_ipar.f  couple_edges.f  cubic_grid.f  d1mach.f  derivatives.f  diff_eqns.f  dipole_coef.f  done.f  dot_4.f  dqag.f  dqags.f  error.f  eval.f  fle_params.inc  generate_grid.f  get_set.f  get_tokens.f  global_to_local.f  (+55 more)
