bin_PROGRAMS = waterwaves splinetest

waterwaves_FFLAGS = -I/usr/include $(AM_FFLAGS)
splinetest_FFLAGS = $(AM_FFLAGS)

splinetest_SOURCES = error.f spline.f splinetest.f

waterwaves_SOURCES =  analytic.f \
analytic_t.f \
bem.f \
boundary_conditions.f \
check_coefs.f \
check_interfaces.f \
check_network_parameters.f \
coefficients.f \
compute_ngp_nae.f \
compute_ngp_sd.f \
compute_nnw.f \
contour_integral.f \
copy_ngp_to_nw_ipar.f \
couple_edges.f \
derivatives.f \
diff_eqns.f \
dipole_coef.f \
done.f \
dot_4.f \
error.f \
eval.f \
generate_grid.f \
get_set.f \
global_to_local.f \
i_assert.f \
init.f \
init_common_blocks.f \
iterate.f \
iterate_double.f \
main.f \
net_cdf.f \
open_output_files.f \
pltout.f \
prog_arguments.f \
quadpack.f \
r_assert.f \
read_analytic_parameters.f \
read_chk_parameters.f \
read_linwave.f \
read_netw_par.f \
read_network_parameters.f \
read_ngp_nw.f \
read_nnw_sd.f \
read_nsd.f \
read_parameters.f \
read_rfwave.f \
read_solve_parameters.f \
read_time_parameters.f \
regrid.f \
relax.f \
rk4.f \
scale.f \
set_tangent.f \
setup_ax_b_double.f \
solve_bie.f \
solve_laplace.f \
solve_sd_double.f \
source_coef.f \
spline.f \
wavemaker.f \
weight.f \
write_coef_sd.f
