bin_PROGRAMS = waterwaves splinetest

waterwaves_FFLAGS = -I/usr/include $(AM_FFLAGS)
splinetest_FFLAGS = $(AM_FFLAGS)

splinetest_SOURCES = error.f spline.f splinetest.f

waterwaves_SOURCES =  analytic.f \
analytic_t.f \
bem.f \
boundary_conditions.f \
check_coefs.f \
coefficients.f \
contour_integral.f \
coord_transformations.f \
derivatives.f \
diff_eqns.f \
done.f \
dot_4.f \
error.f \
generate_grid.f \
get_set.f \
i_assert.f \
init.f \
iterate.f \
iterate_double.f \
main.f \
net_cdf.f \
pltout.f \
quadpack.f \
r_assert.f \
read_parameters.f \
regrid.f \
relax.f \
rk4.f \
set_tangent.f \
setup_ax_b_double.f \
solve_bie.f \
solve_laplace.f \
solve_sd_double.f \
spline.f \
wavemaker.f \
weight.f \
write_coef_sd.f
